--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
           access-id: p-jiu4ebrbyalq
           static-secrets:
             /MyFirstSecret: 'my_first_secret'
-      - name: Output your secret (obviously you shouldn't really do that)
-        run: echo "Your secret is: ${{ steps.fetch-static-secrets.outputs.my_first_secret }}"
+      - name: Output your secret
+        run: echo "Your secret is ${{ steps.fetch-static-secrets.outputs.my_first_secret }}"
