Pin to main for testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: fetch-static-secrets
-        uses: cmancone/akeyless-action
+        uses: cmancone/akeyless-action@main
         with:
           access-id: p-jiu4ebrbyalq
           static-secrets:
